overflow fix on desktop styling

--- a/frontend/src/components/header/header.scss
+++ b/frontend/src/components/header/header.scss
@@ -13,15 +13,17 @@ header {
 }
 
 #navbar {
-    transition: left .2s cubic-bezier(0, 0, 0.72, 0.33);
+    scroll-behavior: smooth;
+    transition: left .3s cubic-bezier(0, 0, 0.72, 0.33);
 
     &.collapsed {
         display: block;
         position: absolute;
         height: 100vh;
+        width: 83%;
         top: 0;
         left: -100%;
-        z-index: 1;
+        z-index: 3;
 
         &.show {
             display: block;
