--- a/frontend/src/sass/global.scss
+++ b/frontend/src/sass/global.scss
@@ -7,9 +7,14 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     min-height: 100vh;
+    scroll-behavior: smooth;
 
     &.nav-open {
         overflow: hidden;
+
+        @media only screen and (min-width: 1024px) {
+            overflow: initial;
+        }
     }
 }
 
