--- a/frontend/src/sass/post.scss
+++ b/frontend/src/sass/post.scss
@@ -16,6 +16,10 @@
         margin-bottom: 1em;
     }
 
+    .post-contents {
+        margin: 0 auto;
+    }
+
     .post-desc {
         width: 100%;
 
